# markdown-extract

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  PARSER_DOCS.md  README.md  action.yml  entrypoint.sh
.github/: FUNDING.yml  pull_request_template.md
.github/action/: Dockerfile  entrypoint.sh
.github/scripts/: extract_notes.sh
.github/workflows/: action_test.yml  build_and_test.yml  create_release.yml
cli/: Cargo.toml
cli/src/: bin.rs
crates/markdown-extract/: CHANGELOG.md  Cargo.toml  README.md
crates/markdown-extract-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/markdown-extract-cli/src/: main.rs
crates/markdown-extract/src/: lib.rs
crates/markdown-extract/tests/markdown/: multiple_matches.md
examples/: sample.md  sample.rs
parser/: Cargo.toml
parser/src/: block.rs  document.rs  lib.rs  node.rs  validator.rs
parser/tests/: integration.rs
src/: bin.rs  document.rs  error.rs  extract.rs  heading.rs  lib.rs  parser.rs  state.rs
src/commands/: extract.rs  mod.rs  view.rs
src/matchers/: mod.rs  regex.rs  simple.rs
tests/: extract.rs
tests/markdown/: heading_in_code_block.md
