[package]
name = "markdown-extract"
description = "Extract sections of a markdown file with a regular expression."
version = "2.0.0"
authors = ["Sean Bailey <hello@seanbailey.dev>"]
license = "MIT"
repository = "https://github.com/sean0x42/markdown-extract"
keywords = ["markdown", "extract"]
edition = "2018"
exclude = [".github/*"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "markdown-extract"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.3"
