[package]
name = "markdown-extract-cli"
description = "Extract sections of a markdown file with a regular expression"
version = "2.1.0"
edition = "2021"
authors = ["Sean Bailey <hello@seanbailey.dev>"]
license = "MIT"
repository = "https://github.com/sean0x42/markdown-extract"
keywords = ["markdown", "extract"]
readme = "README.md"

[[bin]]
name = "markdown-extract"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
markdown-extract = { version = "2.0.0", path = "../markdown-extract" }
regex = "1.3"
